Read bookmarks from 'NETSCAPE-Bookmark-file's that don't have a beginning <DT> tag.

BUG=601677

Review URL: https://codereview.chromium.org/1873403003

Cr-Commit-Position: refs/heads/master@{#387618}

Former-commit-id: fc21e5d1a95a9607ca3375b7e09521a95cc4a306